Create a calculator that kind of works
Need to modify functionality, specifically so after a user enters a solution and
begins typing again, calculator full resets but retains capability to start
performing math on the solution.  Also need to add in hover and click effects for
user experience.

--- a/styles.css
+++ b/styles.css
@@ -101,4 +101,9 @@ body {
   height: 50px;
   background: none;
   box-sizing: border-box;
+  font-size: 2em;
+}
+
+#numberButton1 {
+  border: none;
 }
